feat: user internal endpoint
